service-mesh/openshift-distributed-tracing-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
  labels:
    kubernetes.io/metadata.name: openshift-distributed-tracing
  name: openshift-distributed-tracing
